--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Author</th>
       <th>Content</th>
+      <th>Creation Date</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= tweet.author %></td>
         <td><%= tweet.content %></td>
+        <td><%= tweet.created_at %></td>
         <td><%= link_to 'Show', tweet %></td>
         <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
         <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
