--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -8,6 +8,7 @@
       <th>Author</th>
       <th>Content</th>
       <th>Creation Date</th>
+      <th>Likes</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,9 +19,11 @@
         <td><%= tweet.author %></td>
         <td><%= tweet.content %></td>
         <td><%= tweet.created_at %></td>
+        <td><%= tweet.likes %></td>
         <td><%= link_to 'Show', tweet %></td>
         <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
         <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+         <td><%= link_to 'Like', like_tweet_path(tweet), method: :put %></td>
       </tr>
     <% end %>
   </tbody>
