--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,162 @@
  *= require_tree .
  *= require_self
  */
+ 
+
+body {
+	background-color: #fff;
+	color: #333;
+	margin: 33px
+}
+
+body,p,ol,ul,td {
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 13px;
+	line-height: 18px
+}
+
+pre {
+	background-color: #eee;
+	padding: 10px;
+	font-size: 11px
+}
+
+a {
+	color: #000
+}
+
+a:visited {
+	color: #666
+}
+
+a:hover {
+	color: #fff;
+	background-color: #000
+}
+
+th {
+	padding-bottom: 5px
+}
+
+td {
+	padding: 0 5px 7px
+}
+
+div.field,div.actions {
+	margin-bottom: 10px
+}
+
+#notice {
+	color: green
+}
+
+.field_with_errors {
+	padding: 2px;
+	background-color: red;
+	display: table
+}
+
+#error_explanation {
+	width: 450px;
+	border: 2px solid red;
+	padding: 7px 7px 0;
+	margin-bottom: 20px;
+	background-color: #f0f0f0
+}
+
+#error_explanation h2 {
+	text-align: left;
+	font-weight: bold;
+	padding: 5px 5px 5px 15px;
+	font-size: 12px;
+	margin: -7px -7px 0;
+	background-color: #c00;
+	color: #fff
+}
+
+#error_explanation ul li {
+	font-size: 12px;
+	list-style: square
+}
+
+label {
+	display: block
+}
+
+.wotbody {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #444444;
+	background-color: #fef7f7;
+	font-size: 12pt
+}
+
+.heading {
+	text-align: center;
+	margin-top: 2em
+}
+
+.login {
+	padding: 0.5em;
+	text-align: right;
+	font-size: 0.75em;
+	color: white;
+	font-weight: bold;
+	height: 1.5em;
+	background-color: #993300
+}
+
+.wottitle {
+	color: #660000;
+	text-align: center
+}
+
+.wotitem {
+	border: 2px solid #dfcaca;
+	margin: 20px auto;
+	padding: 1em;
+	width: 90%;
+	background-color: white
+}
+
+.walltweet {
+	color: #4d5e9b;
+	margin: auto;
+	border: 1px dashed #660000;
+	padding-left: 20px;
+	padding-top: 20px;
+	background-color: white;
+	width: 90%
+}
+
+.numlikes {
+	font-weight: bold;
+	color: mediumvioletred;
+	font-size: 1.5em
+}
+
+.smallfont {
+	font-size: 9pt
+}
+
+.likes {
+	float: left;
+	width: 95px;
+	margin-top: 0.5em;
+	text-align: center
+}
+
+.item {
+	border-left: 2px solid #dfcaca;
+	margin-left: 115px;
+	padding-left: 1.1em
+}
+
+h2 {
+	color: #cc0000
+}
+
+h3 {
+	font-weight: normal
+}
+
+
