--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,9 @@
 
   <body>
     <%= yield %>
+    <body class="wotbody">
+    <h1 class="wottitle">Wall of Tweets - RoR Edition 2022</h1>
+    <br/>
+    </body>
   </body>
 </html>
